<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/true_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/btn_true"
            style="@style/truefalse_btn"
            android:onClick="guessTrue" />

        <Button
            android:id="@+id/false_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btn_false"
            style="@style/truefalse_btn"
            android:onClick="guessFalse" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/negativeSmallMargin"
        android:layout_marginRight="@dimen/negativeSmallMargin"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/mediumMargin"
            android:paddingLeft="@dimen/marginHuge"
            android:paddingStart="@dimen/marginHuge"
            android:paddingRight="@dimen/marginHuge"
            android:paddingEnd="@dimen/marginHuge"
            android:paddingBottom="@dimen/mediumMargin" >

        <TextView
            android:id="@+id/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/smallMargin"
            android:text="@string/question" />

        <TextView
            android:id="@+id/question_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>